--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="images/Headshot.jpeg" alt="Fanny's Headshot">
+        <img src="Headshot.jpeg" alt="Fanny's Headshot">
       </td>
       <td>
         <h1>Fanny Li</h1>
